# DesktopGirls

./: dancer.py  pyproject.toml
app/core/: player_bridge.py
app/ui/: dancer_window.py  tray.py
src/: rvm_matting.py
