[project]
name = "desktop-dancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backgroundremover",
    "torch",
    "torchvision",
    "PyGObject<3.50; sys_platform == 'linux'",
    "pycairo; sys_platform == 'linux'",
    "PySide6",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
